Fix missing space.

--- a/refactor/style.css
+++ b/refactor/style.css
@@ -5,7 +5,7 @@
  * It can also be loaded as style.css from a CScout configuration
  * directory.
  *
- * $Id: style.css,v 1.3 2008/09/29 09:17:36 dds Exp $
+ * $Id: style.css,v 1.4 2008/10/09 10:45:47 dds Exp $
  */
 
 /* General style */
@@ -72,7 +72,7 @@ a:hover {color:#888888;}
 	padding:2px 4px 3px;
 	text-decoration:none
 }
-.pagen:hover{
+.pagen:hover {
 	text-decoration:none
 }
 .pagen.next, .pagen.prev, .pagen.all, {
